--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
-.conteneur-grid {
-display: grid;
-grid-gap: 10px;
-width: 35%;
-height: 25%;
-padding: 10px;
-border: 2px solid red;
-background-color: #DDD;
-grid-template-columns: repeat(10, 1fr);
-grid-template-rows: repeat(5, 1fr);
-text-align: center;
+body {
+  background-color: rgb(188, 193, 238);
 }
 
-.conteneur-grid > div{
+.container-grid {
+display: grid;
+grid-gap: 10px;
+width: 500px;
+height: 500px;
+padding: 10px;
+border: 2px solid rgb(140, 0, 255);
+background-color: rgb(157, 116, 177);
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(5, 1fr);
+}
+
+
+
+.ccase-class {
   padding: 10px 0px;
-  background-color: #ED8;
+  background-color: rgb(223, 231, 103);
   border: 1px solid black;
+}
+
+.ccaseNumber-class {
+  text-align: center;
+  font-size: 10px;
+  color: black;
 }
