--- a/index.css
+++ b/index.css
@@ -1,52 +1,60 @@
 body {
-  background-image: url("pictures/boulesloto.jpg");
-  background-size: cover;
+background-image: url("pictures/boulesloto.jpg");
+background-size: cover;
+overflow-x: hidden;
+overflow-y: hidden; 
 }
 
-.container-grid {
-  display: grid;
-  grid-gap: 10px;
-  width: 400px;
-  height: 400px;
-  padding: 10px;
-  border: 2px solid rgb(19, 3, 87);
-  background-color: rgb(94, 166, 194);
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  }
-  
-  
-  
-  .ccase-class {
-    padding: 5px 0px;
-    background-color: rgb(226, 228, 195);
-    border: 1px solid black;
-    border-radius: 50%;
-  }
-  
-  .ccaseNumber-class {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: black;
-  }
-  
-  h1 {
-    text-align: center;
-    font-size: 50px;
-  }
-  
-  h1, h2 {
-    color: white;
-  }
-  
-  #resultat, #test {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .button {
-    height: 50px;
-    width: 150px;
-  }
+h1 {
+text-align: center;
+font-size: 50px;
+color: white;
+}
+    
+.button {
+height: 60px;
+width: 200px;
+white-space: pre-line;
+font-size: 20px;
+}
+
+.button:hover {
+background-color:#afaaaa;
+}
+
+#button {
+text-align: center;
+margin-top: 50px;
+}
+
+#avertissement {
+display: flex;
+justify-content: center;
+text-align: center;
+align-items: center;
+width: 250px;
+height: 250px;
+padding: 10px;
+margin-top: 300px;
+margin-left: auto;
+margin-right: auto;
+border: 2px solid black;
+background-color: #d3cece;
+border-radius: 50%;
+font-size: 20px;
+}
+
+footer{
+display: flex;
+justify-content: center;
+background: black;
+position:absolute;
+left:0;
+bottom:0;
+width:100%;
+padding-top:15px;
+height:50px;
+color: white;
+text-align: center;
+align-items: center;
+}
